# hsm_remote

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common.cmake
contrib/: conanfile.txt  conanprofile  conanprofile_msvc  contrib.cmake
contrib/griha/include/griha/tools/: guard.hpp  hexadecimal.hpp
contrib/python3_include_patch/: pyconfig.h
resources/: hsm_server.conf
src/: CMakeLists.txt
src/hsm_base/: CMakeLists.txt  logger.cpp
src/hsm_base/crypto/: cipher.hpp  crypto_context.hpp  crypto_types.hpp  error.hpp  input_output.hpp
src/hsm_base/misc/: common.hpp  encoding.hpp  filesystem.hpp  functional.hpp  io_manip.hpp  logger.hpp  unknown_based.hpp
src/hsm_client/: CMakeLists.txt  client.cpp
src/hsm_client/crypto/hsm_client/: cipher.hpp  crypto_context.hpp
src/hsm_lib/: CMakeLists.txt  cipher.cpp  crypto_context.cpp  crypto_context_impl.hpp  crypto_win_base.hpp  keys.hpp
src/hsm_lib/crypto/hsm_lib/: cipher.hpp  crypto_context.hpp
src/hsm_server/: CMakeLists.txt  error_sink.hpp  io_crypto.hpp  log.cpp  main.cpp
src/hsm_utils/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  hsm_client_dotnet.sln
test/hsm_client_dotnet/: Error.cs  ICipher.cs  ICryptoContext.cs  IError.cs  IInput.cs  IOutput.cs  IRsaCipher.cs  Input.cs  Native.cs  Output.cs  Program.cs
test/hsm_client_dotnet/Properties/: AssemblyInfo.cs
test/test_hsm_lib/: CMakeLists.txt  common.hpp  log.cpp  main.cpp  test_cipher.cpp  test_client.cpp  test_crypto_context.cpp  test_rnd.cpp  test_utilities.cpp
